@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/papyon
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/papyon/Attic/ChangeLog,v 1.33 2011/12/11 15:20:33 armin76 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/papyon/Attic/ChangeLog,v 1.34 2012/01/20 17:54:08 ssuominen Exp $
+
+  20 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> papyon-0.5.6.ebuild:
+  ppc/ppc64 stable wrt #390349
 
   11 Dec 2011; Raúl Porcel <armin76@gentoo.org> papyon-0.5.6.ebuild:
   alpha/ia64/sparc stable wrt #390349
